<resources>
    <string name="app_name">MenuMaker</string>
    <string name="menumakerDesc">Menu maker is a quick way to order meals from your favorite local restaurant</string>
    <string name="specials">Specials</string>
    <string name="checkout">Checkout</string>
    <string name="food_image">Food Image</string>
    <string name="restaurants">Restaurants</string>
    <string name="restaurant">Restaurants</string>
    <string name="food">Food</string>
    <string name="price">Price</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="increase_food_items">Increase number of food items to be added to cart</string>
    <string name="decrease_food_items">Decrease number of food items to add to cart</string>
    <string name="_0">0</string>
    <string name="add">Add</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="order_id">Order ID</string>
    <string name="date_time">Date/Time</string>
    <string name="total">Total</string>
    <string name="order_history">Order History</string>
</resources>