<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivFoodImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/food_image"/>

    <TextView
        android:id="@+id/tvRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/ivFoodImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/ivFoodImage"
        app:layout_constraintTop_toBottomOf="@id/tvRestaurant"
        app:layout_constraintBottom_toTopOf="@+id/tvPrice"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="24sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/ivFoodImage"
        app:layout_constraintBottom_toBottomOf="@id/ivFoodImage"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDecreaseValue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="30dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/btnIncreaseValue"
        app:layout_constraintEnd_toStartOf="@id/tvNumItems"
        app:layout_constraintBottom_toBottomOf="@id/btnIncreaseValue"
        app:srcCompat="@drawable/ic_remove"
        android:contentDescription="@string/decrease_food_items" />

    <TextView
        android:id="@+id/tvNumItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="25sp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/btnIncreaseValue"
        app:layout_constraintTop_toTopOf="@id/btnIncreaseValue"
        app:layout_constraintBottom_toBottomOf="@id/btnIncreaseValue"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnIncreaseValue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRestaurant"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/increase_food_items" />

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/ivFoodImage"
        app:layout_constraintEnd_toEndOf="@+id/btnIncreaseValue"
        app:layout_constraintStart_toStartOf="@+id/btnDecreaseValue" />
</androidx.constraintlayout.widget.ConstraintLayout>