<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:id="@+id/btnRestaurantSelect">

    <ImageView
        android:id="@+id/ivRestaurantImage"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/restaurant_image"/>

    <TextView
        android:id="@+id/tvRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/ivRestaurantImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:text="@string/food"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ivRestaurantImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivRestaurantImage"
        app:layout_constraintTop_toBottomOf="@id/tvRestaurant" />
</androidx.constraintlayout.widget.ConstraintLayout>